syntax = "proto3";


option csharp_namespace = "MusicStuffBackend";

import "genericMessages.proto";
import "music.proto";

service Album {
  rpc GetAlbum (Id) returns(FullAlbumInfo);
  rpc AddNewAlbum (AlbumMessage) returns (Result);
  rpc RemoveAlbum (Id) returns (Result);
  rpc FindAlbumsByName(String)returns(Albums);
  rpc FindAlbumsByAuthor(String)returns(Albums);
}
message AlbumMessage{
  string name =1;
  string pathPhoto=2;
  repeated int64 coPublishers = 3;
}
message FullAlbumInfo{
  AlbumMessage albumInfo = 1;
  repeated Track tracks = 2;
}
message Albums{
  repeated FullAlbumInfo albums = 1;
}
