syntax = "proto3";

option csharp_namespace = "MusicStuffBackend";

message Result{
  string statusCode = 1;
  string details = 2;
}
message Id {
  int64 messageId = 1;
}