syntax = "proto3";


option csharp_namespace = "MusicStuffBackend";

import "genericMessages.proto";

service Music {
  rpc AddNewTrack (Track) returns (Result);
  rpc RemoveTrack (Id) returns (Result);
  rpc GetTrackById (Id) returns (Track);
  rpc FindTracksByName(String)returns(Tracks);
  rpc FindTracksByAuthor(String)returns(Tracks);
}
message Track{
  string nameOfTrack = 1;
  int64 IdAlbum = 2;
  double duration = 3;
  string pathOfTrack = 4;
  repeated int64 coPublishers = 5;
}
message Tracks{
  repeated Track track = 1;
}